--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,17 @@
 /server/.fleet
 /server/.idea
 /server/.vscode
+
+/client/node_modules
+/client/.pnp
+/client/.pnp.js
+/client/coverage
+/client/build
+/client/.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
